--- a/github_pages/src/About.css
+++ b/github_pages/src/About.css
@@ -1,11 +1,19 @@
+#About {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: none;
+    max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+}
+
 #About_Title {
-    float: left;
     padding: 100px;
     font-size: 30px;
 }
 
 #About_Text {
-    
     padding: 100px;
 }
 
