--- a/github_pages/src/Contact.css
+++ b/github_pages/src/Contact.css
@@ -1,14 +1,18 @@
+#Contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: none;
+    max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    background-color: lightblue;
+}
+
 #Contact_Title {
     font-size: 30px;
     text-align: center;
-}
-
-#Contact {
-    margin-left: 33%;
-    margin-right: 33%;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    width: 33%;
 }
 
 #Contact_Email, #Contact_Message {
@@ -16,16 +20,17 @@
 }
 
 #Contact_Email {
-    margin-bottom: 15px;
-    width: 100%;
+    margin-top: 50px;
+    width: 30%;
 }
 
 #Contact_Message {
-    margin-bottom: 15px;
-    width: 100%;
+    margin-top: 50px;
+    width: 30%;
 }
 
 #Contact_Button {
-    width: 100%;
+    margin-top: 50px;
+    width: 30%;
     height: 30px;
 }
