--- a/github_pages/src/Main.css
+++ b/github_pages/src/Main.css
@@ -1,6 +1,8 @@
 #Main {
-    width: auto;
-    height: 1000px;
+    max-width: none;
+    max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     background-color: lightblue;
     text-align: center;
 }
