--- a/github_pages/src/Menu.css
+++ b/github_pages/src/Menu.css
@@ -14,13 +14,13 @@
 }
 
 .Menu_List li {
-    display: inline-block;
     padding: 15px;
     margin: auto;
     border-radius: 10px;
-    text-decoration: none;
+    list-style: none;
 }
 
 .Menu_List li:hover {
     background-color: #cfcfcf;
+    cursor: pointer;
 }
