--- a/github_pages/src/App.css
+++ b/github_pages/src/App.css
@@ -1,3 +1,10 @@
-.Clear {
-    clear: both;
+.myContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: none;
+    max-height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
