--- a/github_pages/src/Experience.css
+++ b/github_pages/src/Experience.css
@@ -16,7 +16,7 @@
     height: 10px;
     padding: 25px;
     margin: 25px;
-    background-color: lightblue;
+    background-color: grey;
     border-radius: 100px;
 }
 
