--- a/github_pages/src/Main.css
+++ b/github_pages/src/Main.css
@@ -3,8 +3,11 @@
     max-height: 100%;
     min-width: 100%;
     min-height: 100%;
-    background-color: lightblue;
+    
+    background-repeat: no-repeat;
+    background-size: cover;
     text-align: center;
+    
 }
 
 #Main_Name {
