--- a/github_pages/src/Project.css
+++ b/github_pages/src/Project.css
@@ -4,12 +4,17 @@
 }
 
 .Project {
-    display: flex;
     padding-left: 25%;
     padding-right: 25%;
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
+}
+
+.Prj_Box {
+    display: flex;
+    background-color: white;
+    box-shadow: 5px 5px 15px grey;
 }
 
 .Prj_Name {
