--- a/github_pages/src/App.css
+++ b/github_pages/src/App.css
@@ -10,14 +10,13 @@
 }
 
 #top {
-    display: flex;
-    flex-direction: column;
     position: absolute;
     padding: 10px;
     width: 50px;
     height: 50px;
-    right: 2%;
-    bottom: 2%;
+    z-index: 9999;
+    bottom: 25px;
+    right: 35px;
     text-align: center;
     color: white;
     background-color: grey;
